[package]
name = "cf_speedtest"
version = "0.5.1"
authors = ["https://github.com/12932"]
repository = "https://github.com/12932/cf_speedtest"
keywords = ["cross-platform", "speedtest", "cli", "speed", "test"]
categories = ["command-line-utilities"]
edition = "2021"
license = "MIT"
description = "A command-line internet speed test tool"
readme = "README.md"
default-run = "cf_speedtest"

[[bin]]
name = "cf_speedtest"
path = "src/main.rs"
doc = false

[dependencies]
ureq = "3.0.9"
chrono = "0.4.40"
argh = "0.1.13"
rustls = { version = "0.23.22", default-features = false, features = ["ring"] } 	# same version as ureq 
webpki-roots = "1.0.0" 	                                                        # same version as ureq
comfy-table = "7.1.4"
once_cell = "1.21.1"

[profile.release]
debug = false
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1
