[package]
name = "cf_speedtest"
version = "0.5.3"
authors = ["https://github.com/12932"]
repository = "https://github.com/12932/cf_speedtest"
keywords = ["cross-platform", "speedtest", "cli", "speed", "test"]
categories = ["command-line-utilities"]
edition = "2021"
license = "MIT"
description = "A command-line internet speed test tool"
readme = "README.md"
default-run = "cf_speedtest"

[[bin]]
name = "cf_speedtest"
path = "src/main.rs"
doc = false

[dependencies]
ureq = "3.0.12"
chrono = "0.4.41"
argh = "0.1.13"
rustls = { version = "0.23.29", default-features = false, features = ["ring"] }
webpki-roots = "1.0.1"
comfy-table = "7.1.4"
ctrlc = "3.4.7"
phf = { version = "0.11", features = ["macros"] }

[profile.release]
debug = false
strip = "none"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
