[package]
name = "cf_speedtest"
version = "0.6.1"
authors = ["https://github.com/12932"]
repository = "https://github.com/12932/cf_speedtest"
keywords = ["cross-platform", "speedtest", "cli", "speed", "test"]
categories = ["command-line-utilities"]
edition = "2021"
license = "MIT"
description = "A command-line internet speed test tool"
readme = "README.md"
default-run = "cf_speedtest"

[[bin]]
name = "cf_speedtest"
path = "src/main.rs"
doc = false

[dependencies]
ureq = "3.1.2"
chrono = "0.4.42"
argh = "0.1.13"
rustls = { version = "0.23.33", default-features = false, features = ["ring"] }
webpki-roots = "1.0.3"
ctrlc = "3.5.1"
phf = { version = "0.13", features = ["macros"] }
socket2 = "0.6.1"

[profile.release]
debug = false
strip = "none"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
